clusters/default/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
    app.kubernetes.io/version: v1.50.0
    helm.sh/chart: homarr-8.9.0
spec:
  ports:
  - name: app
    port: 7575
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
  type: ClusterIP
