clusters/default/homarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.__BASE-DOMAIN__`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
